--- a/style.css
+++ b/style.css
@@ -217,3 +217,55 @@ header{
     flex-direction: column;
     align-items: flex-start;
 }
+
+/* example-section */
+.example-header{
+text-align: center;
+flex-direction: column;
+gap: 20px;
+}
+/* .examples-headeing-text{
+    margin-bottom: 20px;
+
+} */
+
+.exaples-area{
+    justify-content: space-between;
+    margin-block: 30px;
+}
+.example-card{
+    width: 23%;
+    position: relative;
+    min-height: 300px;
+    background: black;
+   background: linear-gradient(rgb(0 , 0, 0, 0.2 ),rgb(0, 0, 0, 0.8)) , url(asset/asset\ 37.jpeg);
+   transition: 0.2s ease-out;
+
+   
+}
+.example-card:hover{
+box-shadow:0 0 30px #888 ;
+
+}
+.example-card:nth-child(2){
+    background:  linear-gradient(rgb(0 , 0, 0, 0.2 ),rgb(0, 0, 0, 0.8)) , url(asset/asset\ 36.jpeg) ;
+    background-size: cover;
+}
+.example-card:nth-child(3){
+    background:  linear-gradient(rgb(0 , 0, 0, 0.2 ),rgb(0, 0, 0, 0.8)) , url(asset/asset\ 38.jpeg) ;
+    background-size: cover;
+}
+.example-card:nth-child(4){
+    background:  linear-gradient(rgb(0 , 0, 0, 0.2 ),rgb(0, 0, 0, 0.8)) , url(asset/asset\ 39.jpeg) ;
+    background-size: cover;
+}
+
+.card-text{
+    position: absolute;
+    
+    bottom: 20px;
+    left: 20px;
+    right: 20px;
+    color: white; 
+}
+ 
