--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ ul{
     max-width: 1080px;
     margin-inline: auto;
     padding-inline: var(--padding-inline-section);
+    overflow: hidden;
 }
 
 .flex{
@@ -128,6 +129,10 @@ justify-content: end;
 gap: 40px;
 }
 
+.nav-toggle{
+    display: none;
+}
+
 /* header section */
 header{
     padding: 50px var(--padding-inline-section) 0;
@@ -148,7 +153,7 @@ header{
 }
 
 .header-right img{
-    width: 600px;
+    width:100%;
 }
 
 /* companies-section */
@@ -160,8 +165,9 @@ header{
 
 }
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px;
 }
 .logo{
     height: 46px;
@@ -187,7 +193,7 @@ header{
 .feature-area{
    flex-wrap: wrap; 
    justify-content: space-between;
-   gap: 40px;
+   gap: 20px;
    /* margin-top: 20px; */
 }
 
@@ -235,11 +241,12 @@ gap: 20px;
 .exaples-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 .example-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
    background: linear-gradient(rgb(0 , 0, 0, 0.2 ),rgb(0, 0, 0, 0.8)) , url(asset/asset\ 37.jpeg);
    transition: 0.2s ease-out;
